@@ -1412,6 +1412,33 @@ void DumpFeature::start() {
   }
 }
 
+namespace {
+bool shouldRetryRequest(httpclient::SimpleHttpResult const* response,
+                        Result const& check) {
+  if (response != nullptr) {
+    // check for retryable errors in simple http client
+    switch (response->getResultType()) {
+      case httpclient::SimpleHttpResult::COULD_NOT_CONNECT:
+        std::this_thread::sleep_for(std::chrono::milliseconds(500));
+        return true;
+      case httpclient::SimpleHttpResult::WRITE_ERROR:
+      case httpclient::SimpleHttpResult::READ_ERROR:
+        return true;  // retry loop
+      default:
+        break;
+    }
+  }
+
+  if (check.is(TRI_ERROR_CLUSTER_TIMEOUT) ||
+      check.is(TRI_ERROR_HTTP_GATEWAY_TIMEOUT)) {
+    // retry
+    return true;
+  }
+
+  return false;
+}
+}  // namespace
+
 void DumpFeature::ParallelDumpServer::createDumpContext(
     httpclient::SimpleHttpClient& client) {
   VPackBuilder builder;
@@ -1429,19 +1456,36 @@ void DumpFeature::ParallelDumpServer::createDumpContext(
   }
 
   auto bodystr = builder.toJson();
+  size_t retryCount = 100;
 
   auto url = basics::StringUtils::concatT("_api/dump/start?dbserver=", server);
-  std::unique_ptr<arangodb::httpclient::SimpleHttpResult> response(
-      client.request(arangodb::rest::RequestType::POST, url, bodystr.c_str(),
-                     bodystr.size(), {}));
+  std::unique_ptr<arangodb::httpclient::SimpleHttpResult> response;
+  while (true) {
+    response.reset(client.request(arangodb::rest::RequestType::POST, url,
+                                  bodystr.c_str(), bodystr.size(), {}));
 
-  auto check = ::arangodb::HttpResponseChecker::check(client.getErrorMessage(),
-                                                      response.get());
-  if (check.fail()) {
-    LOG_TOPIC("bdecf", FATAL, Logger::DUMP)
-        << "failed to create dump context on server " << server << ": "
-        << check.errorMessage();
-    FATAL_ERROR_EXIT();
+    auto check = ::arangodb::HttpResponseChecker::check(
+        client.getErrorMessage(), response.get());
+    if (check.fail()) {
+      LOG_TOPIC("45d6e", ERR, Logger::DUMP)
+          << "An error occurred while creating a dump context on '" << server
+          << "': " << check.errorMessage();
+      bool const retry = shouldRetryRequest(response.get(), check);
+
+      if (retry && --retryCount > 0) {
+        continue;
+      }
+
+      if (retryCount == 0) {
+        LOG_TOPIC("7a3e4", ERR, Logger::DUMP) << "Too many connection errors.";
+      }
+      LOG_TOPIC("bdecf", FATAL, Logger::DUMP)
+          << "failed to create dump context on server " << server << ": "
+          << check.errorMessage();
+      FATAL_ERROR_EXIT();
+    } else {
+      break;
+    }
   }
 
   bool headerExtracted;
@@ -1503,6 +1547,8 @@ Result DumpFeature::ParallelDumpServer::run(
 
   printBlockStats();
 
+  LOG_TOPIC("1b7fe", INFO, Logger::DUMP) << "all data received for " << server;
+
   return Result{};
 }
 
@@ -1522,7 +1568,7 @@ void DumpFeature::ParallelDumpServer::ParallelDumpServer::printBlockStats() {
     msg += std::to_string(blockCounter[i]);
   }
 
-  LOG_TOPIC("d1349", INFO, Logger::DUMP) << "block counter " << msg;
+  LOG_TOPIC("d1349", DEBUG, Logger::DUMP) << "block counter " << msg;
 }
 
 void DumpFeature::ParallelDumpServer::ParallelDumpServer::countBlocker(
@@ -1576,6 +1622,8 @@ DumpFeature::ParallelDumpServer::receiveNextBatch(
     url += "&lastBatch=" + std::to_string(*lastBatch);
   }
 
+  std::size_t retryCounter = 100;
+
   while (true) {
     std::unique_ptr<arangodb::httpclient::SimpleHttpResult> response(
         client.request(arangodb::rest::RequestType::POST, url, nullptr, 0, {}));
@@ -1586,20 +1634,25 @@ DumpFeature::ParallelDumpServer::receiveNextBatch(
           << "An error occurred while dumping from server '" << server
           << "': " << check.errorMessage();
 
-      // TODO complete this list!
-      if (check.is(TRI_ERROR_CLUSTER_TIMEOUT) ||
-          check.is(TRI_ERROR_HTTP_GATEWAY_TIMEOUT)) {
-        // retry
-        continue;
-      } else {
+      bool const retry = shouldRetryRequest(response.get(), check);
+      if (!retry || --retryCounter == 0) {
+        if (retryCounter == 0) {
+          LOG_TOPIC("684ee", FATAL, Logger::DUMP) << "Too many network errors.";
+        }
         LOG_TOPIC("5cb01", FATAL, Logger::DUMP)
             << "Unrecoverable network/http error: " << check.errorMessage();
         FATAL_ERROR_EXIT();
       }
     } else if (response->getHttpReturnCode() == 204) {
       return nullptr;
+    } else if (response->getHttpReturnCode() == 200) {
+      return response;
+    } else {
+      LOG_TOPIC("2668f", FATAL, Logger::DUMP)
+          << "Got invalid return code: " << response->getHttpReturnCode() << " "
+          << response->getHttpReturnMessage();
+      FATAL_ERROR_EXIT();
     }
-    return response;
   }
 }
 
