@@ -72,6 +72,11 @@ class HttpResponse : public GeneralResponse {
   // you should call writeHeader only after the body has been created
   void writeHeader(basics::StringBuffer*);  // override;
 
+  void clearBody() noexcept {
+    _body->clear();
+    _bodySize = 0;
+  }
+
  public:
   void reset(ResponseCode code) override final;
 
