@@ -1,6 +1,11 @@
 v3.10.10 (XXXX-XX-XX)
 ---------------------
 
+* Enforce that server always returns an empty body if the return code is 204.
+
+* Arangodump retries dump requests in more cases: read, write and connection
+  errors.
+
 * When trying to read multiple documents, the coordinator will now handle empty
   lists gracefully and return an empty result set instead of an error.
 
